syntax = "proto3";

package v1;

option go_package = "/v1";

import "google/api/annotations.proto";

service SignInService {
  rpc SignInInit(SignInInitRequest) returns (SignInInitResponse) {
    option (google.api.http) = {
      post: "/v1/signin/init"
      body: "*"
    };
  }
}

message SignInInitRequest {
  string email = 1;
  string password = 2;
}

message SignInInitResponse {
  string session_id = 1;
}
