syntax = "proto3";

package v1;

option go_package = "/v1";

import "google/api/annotations.proto";

service SignUpService {
  rpc SignUpInit(SignUpInitRequest) returns (SignUpInitResponse) {
    option (google.api.http) = {
      post: "/v1/signup/init"
      body: "*"
    };
  }
  rpc SignUpConfirmEmail(SignUpConfirmEmailRequest) returns (SignUpConfirmEmailResponse) {
    option (google.api.http) = {
      post: "/v1/signup/confirm_email"
      body: "*"
    };
  }
  rpc SignUpEnterPassword(SignUpEnterPasswordRequest) returns (SignUpEnterPasswordResponse) {
    option (google.api.http) = {
      post: "/v1/signup/enter_password"
      body: "*"
    };
  }
  rpc GetOauthSignUpUrls(GetOauthSignUpUrlRequest) returns (GetOauthSignUpUrlResponse) {
    option (google.api.http) = {
      get: "/v1/signup/oauth_urls"
    };
  }
  rpc HandleOauthCallback(HandleOauthCallbackRequest) returns (HandleOauthCallbackResponse) {
    option (google.api.http) = {
      post: "/v1/signup/oauth_callback"
      body: "*"
    };
  }
}

message SignUpInitRequest {
  string email = 1;
  string login = 2;
  string sign_up_token = 3;
}

message SignUpInitResponse {
  string sign_up_token = 1;
  int64 sign_up_session_lifetime = 3;
}

message SignUpConfirmEmailRequest {
  string sign_up_token = 1;
  string verification_code = 2;
}

message SignUpConfirmEmailResponse {
  string sign_up_token = 1;
}

message SignUpEnterPasswordRequest {
  string sign_up_token = 1;
  string password = 2;
}

message SignUpEnterPasswordResponse {
  string session_id = 1;
}

message GetOauthSignUpUrlRequest {
  optional string oauth_provider = 1;
}

message GetOauthSignUpUrlResponse {
  map<string, string> urls = 1;
}

message HandleOauthCallbackRequest {
  bytes body = 1;
  string callback_url = 2;
}

message HandleOauthCallbackResponse {
  string session_id = 1;
}